# stardust-2d-inputs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
registry/: registry.json
releases/: transport-paper-v1.json
stardust_2d_inputs/: __init__.py
stardust_2d_inputs/core/: __init__.py  backends.py  config.py  loader.py  provenance.py  registry.py
stardust_2d_inputs/generators/: __init__.py
stardust_2d_inputs/generators/era5/: README.md  __init__.py  _common.py  monthly_zonal_cloud_content.py  monthly_zonal_cloud_cover.py  monthly_zonal_o3.py  monthly_zonal_srf_params.py  monthly_zonal_variables.py
stardust_2d_inputs/generators/optical/: README.md  __init__.py  _common.py  calcite.py  silica.py  sulfate.py
stardust_2d_inputs/generators/optical/data/silica/: REFERENCES.txt  k_0-1um.csv  k_1-15um.csv  n_0-1um.csv  n_1-15um.csv
stardust_2d_inputs/generators/optical/data/sulfate/: REFERENCES.txt  ref3_sulfate_table_h2so4_75percent.csv  sulfate_absorption_ref1.csv  sulfate_data_s1.txt
stardust_2d_inputs/generators/transport/: README.md  __init__.py  diffusion_decomp.py  tropopause.py
tests/: conftest.py  test_core.py
